The methods for saving and most of the loading are finished. They work and are fairly optimized. Now, all there is left is to completely move the app from Json to SQLite.